# rust-GSL

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  checker.py  doc.sh  index.html  params.json  run-examples.py
.github/workflows/: CI.yml
examples/: Cargo.toml  README.md  blas.rs  bspline.rs  cblas.rs  cdf.rs  chebyshev_approximation.rs  combination.rs  diff.rs  eigen.rs  eigen_nonsymm.rs  fft.rs  fftmr.rs  filt_edge.rs  fitreg.rs  fitreg2.rs  fitting.rs  fitting3.rs  gaussfilt.rs  gaussfilt2.rs  histogram2d.rs  impulse.rs  integration.rs  integration2.rs  interpolation.rs  intro.rs  largefit.rs  linear_algebra.rs  minimization.rs  monte_carlo.rs  multifit_nlinear.rs  multifit_solver.rs  multisets.rs  n_tuples.rs  numerical_differentiation.rs  ordinary_differential_equations.rs  permutation.rs  physical_constant.rs  qrng.rs  radix.rs  (+12 more)
examples/chebyshev_approximation/: main.rs
examples/combination/: main.rs
examples/integration/: main.rs
examples/interpolation/: main.rs
examples/linear_algebra/: main.rs
examples/minimization/: main.rs
examples/monte_carlo/: main.rs
examples/multifit_solver/: main.rs  main2.c
examples/multisets/: main.rs
examples/n_tuples/: main.rs
examples/numerical_differentiation/: main.rs
examples/ordinary_differential_equations/: main.rs
examples/permutation/: main.rs
examples/qrng/: main.rs
examples/radix/: main.rs
examples/radix2/: main.rs
examples/random_number_distribution/: main.rs
examples/rng/: main.rs
examples/roots_of_polynomial/: main.rs
examples/series_acceleration/: main.rs
examples/simple/: main.rs
examples/sorting/: main.rs
examples/statistics/: main.rs
examples/vectors_and_matrices/: main.rs
examples/wavelet_transforms/: main.rs
gsl-sys/: Cargo.toml  README.md  build.rs
gsl-sys/src/: auto.rs  blas.rs  lib.rs  linalg.rs  monte_carlo.rs  solvers.rs
gslsys-mfnlin/: Cargo.toml  build.rs
gslsys-mfnlin/src/: lib.rs
rgsl-nlinear/: Cargo.toml  build.rs
rgsl-nlinear/rgsl-cblib/: Cargo.toml
rgsl-nlinear/rgsl-cblib/src/: lib.rs
rgsl-nlinear/src/: lib.rs  multifit_nlinear.c  multifit_nlinear.rs
src/: airy.rs  bessel.rs  blas.rs  canonical.rs  cblas.rs  clausen.rs  coulomb.rs  coupling_coefficients.rs  dawson.rs  debye.rs  dilogarithm.rs  eigen.rs  elementary.rs  elementary_operations.rs  elliptic.rs  enums.rs  error.rs  exponential.rs  exponential_integrals.rs  fermi_dirac.rs  ffi.rs  fft.rs  filter.rs  fit.rs  gamma_beta.rs  gegenbauer.rs  hypergeometric.rs  integration.rs  interpolation.rs  jacobian_elliptic.rs  laguerre.rs  lambert_w.rs  legendre.rs  lib.rs  linear_algebra.rs  logarithm.rs  macros.rs  minimizer.rs  multifit.rs  multilarge.rs  (+25 more)
src/_docs/: header.html
src/ffi/: blas.rs  linalg.rs  mod.rs  monte_carlo.rs  randist.rs  solvers.rs
src/randist/: bernoulli.rs  beta.rs  binomial.rs  bivariate_gaussian.rs  cauchy.rs  chi_squared.rs  dirichlet.rs  exponential.rs  exponential_power.rs  f_distribution.rs  flat.rs  gamma.rs  gaussian.rs  gaussian_tail.rs  geometric.rs  gumbel.rs  hypergeometric.rs  landau.rs  laplace.rs  levy_alpha.rs  levy_skew.rs  logarithmic.rs  logistic.rs  lognormal.rs  mod.rs  multinomial.rs  negative_binomial.rs  pareto.rs  pascal.rs  poisson.rs  rayleigh.rs  rayleigh_tail.rs  shuffling_sampling.rs  spherical_vector.rs  t_distribution.rs  weibull.rs  weidbull.rs
src/sf/: airy.rs  bessel.rs  clausen.rs  coulomb.rs  coupling_coefficients.rs  dawson.rs  debye.rs  dilogarithm.rs  elementary_operations.rs  elliptic.rs  error.rs  exponential.rs  exponential_integrals.rs  fermi_dirac.rs  gamma_beta.rs  gegenbauer.rs  hypergeometric.rs  jacobian_elliptic.rs  laguerre.rs  lambert_w.rs  legendre.rs  logarithm.rs  mod.rs  power.rs  psi.rs  synchrotron.rs  transport.rs  trigonometric.rs  zeta.rs
src/types/: basis_spline.rs  chebyshev.rs  combination.rs  complex.rs  discrete_hankel.rs  eigen_symmetric_workspace.rs  fast_fourier_transforms.rs  filter.rs  histograms.rs  integration.rs  integration.rs.tmp  interpolation.rs  mathieu.rs  matrix.rs  matrix_complex.rs  minimizer.rs  mod.rs  monte_carlo.rs  multifit_linear.rs  multifit_solver.rs  multilarge_linear.rs  multimin.rs  multiroot.rs  multiset.rs  mutifit_solver.rs  n_tuples.rs  ordinary_differential_equations.rs  permutation.rs  polynomial.rs  qrng.rs  ran_discrete.rs  result.rs  rng.rs  roots.rs  rstat.rs  series_acceleration.rs  siman.rs  vector.rs  vector_complex.rs  wavelet_transforms.rs
