[package]
name = "GSL"
version = "7.0.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
description = "A rust binding for the GSL (the GNU scientific library)"
repository = "https://github.com/GuillaumeGomez/rust-GSL"
documentation = "https://docs.rs/crate/GSL/"
readme = "README.md"
keywords = ["mathematics", "library", "GSL"]
license = "GPL-3.0+"
edition = "2021"

[dependencies]
sys = { path = "gsl-sys", package = "GSL-sys", version = "3.0.0" }
paste = "1.0"

[features]
v2_1 = ["sys/v2_1"]
v2_2 = ["sys/v2_2", "v2_1"]
v2_3 = ["sys/v2_3", "v2_2"]
v2_4 = ["sys/v2_4", "v2_3"]
v2_5 = ["sys/v2_5", "v2_4"]
v2_6 = ["sys/v2_6", "v2_5"]
v2_7 = ["sys/v2_7", "v2_6"]
dox = ["v2_7", "sys/dox"]

[package.metadata.docs.rs]
features = ["dox"]
rustdoc-args = ["--generate-link-to-definition"]

[lib]
name = "rgsl"
crate-type = ["dylib", "rlib"]
