[package]
name = "gsl-examples"
version = "0.4.6"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

[features]
v2 = ["GSL/v2"]

[dependencies.GSL]
path = "../"

[dependencies]
num = "^0.1"

[[bin]]
name = "chebyshev_approximation"
path = "./chebyshev_approximation.rs"

[[bin]]
name = "combination"
path = "./combination.rs"

[[bin]]
name = "integration"
path = "./integration.rs"

[[bin]]
name = "interpolation"
path = "./interpolation.rs"

[[bin]]
name = "linear_algebra"
path = "./linear_algebra.rs"

[[bin]]
name = "minimization"
path = "./minimization.rs"

[[bin]]
name = "monte_carlo"
path = "./monte_carlo.rs"

[[bin]]
name = "multifit_solver"
path = "./multifit_solver.rs"

[[bin]]
name = "multisets"
path = "./multisets.rs"

[[bin]]
name = "n_tuples"
path = "./n_tuples.rs"

[[bin]]
name = "numerical_differentiation"
path = "./numerical_differentiation.rs"

[[bin]]
name = "ordinary_differential_equations"
path = "./ordinary_differential_equations.rs"

[[bin]]
name = "permutation"
path = "./permutation.rs"

[[bin]]
name = "physical_constant"
path = "./physical_constant.rs"

[[bin]]
name = "qrng"
path = "./qrng.rs"

[[bin]]
name = "radix"
path = "./radix.rs"

[[bin]]
name = "random_number_distribution"
path = "./random_number_distribution.rs"

[[bin]]
name = "rng"
path = "./rng.rs"

[[bin]]
name = "roots_of_polynomial"
path = "./roots_of_polynomial.rs"

[[bin]]
name = "series_acceleration"
path = "./series_acceleration.rs"

[[bin]]
name = "simple"
path = "./simple.rs"

[[bin]]
name = "sorting"
path = "./sorting.rs"

[[bin]]
name = "statistics"
path = "./statistics.rs"

[[bin]]
name = "vectors_and_matrices"
path = "./vectors_and_matrices.rs"

[[bin]]
name = "wavelet_transforms"
path = "./wavelet_transforms.rs"
