[package]
name = "gsl-examples"
version = "0.4.6"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

[dependencies.GSL]
path = "../"

[dependencies]
libc = "~0.2"

[[bin]]
name = "blas"
path = "./blas.rs"

[[bin]]
name = "bspline"
path = "./bspline.rs"

[[bin]]
name = "cblas"
path = "./cblas.rs"

[[bin]]
name = "cdf"
path = "./cdf.rs"

[[bin]]
name = "chebyshev_approximation"
path = "./chebyshev_approximation.rs"

[[bin]]
name = "combination"
path = "./combination.rs"

[[bin]]
name = "diff"
path = "./diff.rs"

[[bin]]
name = "eigen"
path = "./eigen.rs"

[[bin]]
name = "eigen_nonsymm"
path = "./eigen_nonsymm.rs"

[[bin]]
name = "fft"
path = "./fft.rs"

[[bin]]
name = "fftmr"
path = "./fftmr.rs"

[[bin]]
name = "filt_edge"
path = "./filt_edge.rs"
required-features = ["GSL/v2_5"]

[[bin]]
name = "integration"
path = "./integration.rs"

[[bin]]
name = "rng"
path = "./rng.rs"

[[bin]]
name = "statistics"
path = "./statistics.rs"

[[bin]]
name = "vectors_and_matrices"
path = "./vectors_and_matrices.rs"
