[package]
name = "gsl-examples"
version = "0.4.6"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

[dependencies.GSL]
path = "../"

[dependencies]
libc = "~0.2"

[[bin]]
name = "blas"
path = "./blas.rs"

[[bin]]
name = "bspline"
path = "./bspline.rs"

[[bin]]
name = "cblas"
path = "./cblas.rs"

[[bin]]
name = "cdf"
path = "./cdf.rs"

[[bin]]
name = "chebyshev_approximation"
path = "./chebyshev_approximation.rs"

[[bin]]
name = "combination"
path = "./combination.rs"

[[bin]]
name = "diff"
path = "./diff.rs"

[[bin]]
name = "eigen"
path = "./eigen.rs"

[[bin]]
name = "eigen_nonsymm"
path = "./eigen_nonsymm.rs"

[[bin]]
name = "fft"
path = "./fft.rs"

[[bin]]
name = "fftmr"
path = "./fftmr.rs"

[[bin]]
name = "filt_edge"
path = "./filt_edge.rs"
required-features = ["GSL/v2_5"]

[[bin]]
name = "fitreg"
path = "./fitreg.rs"
required-features = ["GSL/v2_1"]

[[bin]]
name = "fitreg2"
path = "./fitreg2.rs"
required-features = ["GSL/v2_1"]

[[bin]]
name = "fitting"
path = "./fitting.rs"
required-features = ["GSL/v2_5"]

[[bin]]
name = "fitting3"
path = "./fitting3.rs"

[[bin]]
name = "gaussfilt"
path = "./gaussfilt.rs"
required-features = ["GSL/v2_5"]

[[bin]]
name = "gaussfilt2"
path = "./gaussfilt2.rs"
required-features = ["GSL/v2_5"]

[[bin]]
name = "histogram2d"
path = "./histogram2d.rs"

[[bin]]
name = "impulse"
path = "./impulse.rs"
required-features = ["GSL/v2_5"]

[[bin]]
name = "integration"
path = "./integration.rs"

[[bin]]
name = "integration2"
path = "./integration2.rs"

[[bin]]
name = "intro"
path = "./intro.rs"

[[bin]]
name = "largefit"
path = "./largefit.rs"
required-features = ["GSL/v2_2"]

[[bin]]
name = "multifit_nlinear"
path = "./multifit_nlinear.rs"

[[bin]]
name = "rng"
path = "./rng.rs"

[[bin]]
name = "statistics"
path = "./statistics.rs"

[[bin]]
name = "vectors_and_matrices"
path = "./vectors_and_matrices.rs"
