[package]
name = "GSL-sys"
version = "1.0.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

description = "A rust binding for the GSL (the GNU scientific library)"
repository = "https://github.com/GuillaumeGomez/rust-GSL"
documentation = "https://docs.rs/crate/GSL-sys/"
readme = "README.md"
keywords = ["mathematics", "library", "GSL"]
license = "GPL-3.0+"

build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"

[lib]
name = "gsl_sys"
crate-type = ["dylib", "rlib"]
